2005-11-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.4.1 ========================
	* 

2005-11-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.4 ========================
	* 

2002-02-25  Keith Vetter <keith@ebook.gemstar.com>

	* datefield.tcl: initial 0.1 implementation 
	* datefield.n: initial 0.1 implementation 