@@ -1,3 +1,9 @@
+2007-10-10  Andreas Kuprie  <andreask@activestate.com>
+
+	* datefield.tcl: Updated to automatically use tile/ttdk when
+	* datefield.man: available. Version updated to 0.2
+	* pkgIndex.tcl:
+
 2005-11-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
